--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,15 @@ footer{
     position: absolute;
     bottom: 0;  
 }
+
+a.active_class {
+    color: yellow;
+    border-bottom: 1px solid red;
+}
+.menu_style {
+    width: 100%;
+    line-height: 60px;
+    background-color: #20232a;
+    display: flex;
+    justify-content: space-around;
+}
